--- a/Resumen20160511.md
+++ b/Resumen20160511.md
@@ -4,3 +4,10 @@
 ### Anormalidades en larvas de *Argopecten purpuratus* (Lamarck, 1819) (Mollusca: Pectinidae), uno de los problemas en la reproducción artificial de semilla
 
 [Avendaño, M., Le Pennec, M., y Cantillanez, M. (2001). Anormalidades en larvas de Argopecten purpuratus (Lamarck, 1819) (Mollusca: Pectinidae), uno de los problemas en la reproducción artificial de semilla. Estud. Oceanol., 20, 33-42.](https://www.researchgate.net/publication/235917869_ANORMALIDADES_EN_LARVAS_DE_ARGOPECTEN_PURPURATUS_Lamarck_1819_MOLLUSCA_PECTINIDAE_UNO_DE_LOS_PROBLEMAS_EN_LA_PRODUCCION_ARTIFICIAL_DE_SEMILLA)
+
+El abastecimiento de semilla del pectínido Argopecten purpuratus al igual que en N. subnodosus, es una de las limitaciones que afronta su cultivo, por una parte está relacionado con la disminución que han experimentado los bancos naturales, principalmente por sobreexplotación, generando bajos niveles en las captaciones de semilla. Además la producción de larvas competentes en laboratorio no siempre tiene altas tasas de supervivencia y presenta estancamientos en su crecimiento. El fracaso de los cultivos realizados en laboratorio puede ser producto de la fertilización de huevos procedentes de gónadas que no han madurado completamente. El objetivo de este estudio fue caracterizar la existencia de larvas anormales y sí la presencia de esas larvas se asocia a ovocitos inmaduros.
+
+Para ello se obtuvieron del medio natural 30 reproductores maduros, los cuales fueron inducidos a la liberación de gametos a través de un aumento de 5 a 6 °C de la temperatura de acondicionamiento. A. purpuratus es una especie que presenta alta fecundidad, la cual está en función de la talla. De seis cultivos realizados, solo dos culminaron con el desarrollo de larvas viables hasta la fijación. En uno de ellos se obtuvo una supervivencia del 5.7 % y en el otro solo el 2.3 %. Los otros cuatro intentos terminaron con larvas que no crecieron y murieron después de 8 a 10 días de cultivo. 
+
+El análisis de larvas veliger a las 48 h después de la fecundación, reveló la presencia de larvas con malformaciones, tales como valvas asimétricas, la superficie con ondulaciones en su contorno, afectando la curvatura de las valvas al punto de no cerrarse. 
+A lo largo del período de desove que presenta esta especie, solo algunas cohortes de ovocitos alcanzan la madurez y son capaces de generar larvas normales. Estas deficiencias asociadas a la inmadurez de ciertos ovocitos plantea la necesidad de conocer los mecanismos que permitan una maduración plena y sincronizada de los gametos.
