--- a/Resumen20160511.md
+++ b/Resumen20160511.md
@@ -3,7 +3,7 @@
 
 ### Anormalidades en larvas de *Argopecten purpuratus* (Lamarck, 1819) (Mollusca: Pectinidae), uno de los problemas en la reproducción artificial de semilla
 
-[Avendaño, M., Le Pennec, M., y Cantillanez, M. (2001). Anormalidades en larvas de *Argopecten purpuratus* (Lamarck, 1819) (Mollusca: Pectinidae), uno de los problemas en la reproducción artificial de semilla. Estud. Oceanol., 20, 33-42.](https://www.researchgate.net/publication/235917869_ANORMALIDADES_EN_LARVAS_DE_ARGOPECTEN_PURPURATUS_Lamarck_1819_MOLLUSCA_PECTINIDAE_UNO_DE_LOS_PROBLEMAS_EN_LA_PRODUCCION_ARTIFICIAL_DE_SEMILLA)
+[Avendaño, M., Le Pennec, M., y Cantillanez, M. (2001). Anormalidades en larvas de *Argopecten purpuratus* (Lamarck, 1819) (Mollusca: Pectinidae), uno de los problemas en la reproducción artificial de semilla. *Estud. Oceanol*., 20, 33-42.](https://www.researchgate.net/publication/235917869_ANORMALIDADES_EN_LARVAS_DE_ARGOPECTEN_PURPURATUS_Lamarck_1819_MOLLUSCA_PECTINIDAE_UNO_DE_LOS_PROBLEMAS_EN_LA_PRODUCCION_ARTIFICIAL_DE_SEMILLA)
 
 El abastecimiento de semilla del pectínido *Argopecten purpuratus* al igual que en *N. subnodosus*, es una de las limitaciones que afronta su cultivo, por una parte está relacionado con la disminución que han experimentado los bancos naturales, principalmente por sobreexplotación, generando bajos niveles en las captaciones de semilla. Además la producción de larvas competentes en laboratorio no siempre tiene altas tasas de supervivencia y presenta estancamientos en su crecimiento. El fracaso de los cultivos realizados en laboratorio puede ser producto de la fertilización de huevos procedentes de gónadas que no han madurado completamente. El objetivo de este estudio fue caracterizar la existencia de larvas anormales y sí la presencia de esas larvas se asocia a ovocitos inmaduros.
 
