--- a/Resumen20160518.md
+++ b/Resumen20160518.md
@@ -6,3 +6,7 @@
 
 [Americo, J.A., Dondero, F., Ozório, M., Allodi, S. y Freitas, M. (2013). Gene discovery in the tropical scallop *Nodipecten nodosus*: Construction and sequencing of
 a normalized cDNA library. *Marine Environmental Research*, 1-7.](http://www.sciencedirect.com/science/article/pii/S0141113613000640)
+
+
+
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/EST's.jpg" / width = 40%>
