--- a/Resumen20160518.md
+++ b/Resumen20160518.md
@@ -9,4 +9,4 @@ a normalized cDNA library. *Marine Environmental Research*, 1-7.](http://www.sci
 
 
 
-<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/EST's.jpg" / width = 40%>
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/1805.jpg" / width = 50%>
