--- a/Resumen20160518.md
+++ b/Resumen20160518.md
@@ -7,6 +7,12 @@
 [Americo, J.A., Dondero, F., Ozório, M., Allodi, S. y Freitas, M. (2013). Gene discovery in the tropical scallop *Nodipecten nodosus*: Construction and sequencing of
 a normalized cDNA library. *Marine Environmental Research*, 1-7.](http://www.sciencedirect.com/science/article/pii/S0141113613000640)
 
-
+Debido a que la mayoría de los bivalvos adultos son sésiles y no pueden migrar, han desarrollado distintas adaptaciones para hacer frente a los factores ambientales de estrés, tales como la desecación causada por la exposición al aire, fluctuaciones en la temperatura y composición del agua, etc. Algunas de estas adaptaciones son mecanismos de defensa ampliamente conservados que utilizan enzimas.
+El desarrollo de un atlas de genes en un organismo es un paso importante hacia una mejor comprensión de las bases moleculares de dichas adaptaciones. Un mejor conocimiento del repertorio de genes de *N. nodosus*, que actualmente está muy poco representado, puede ayudar a superar problemáticas del cultivo y mejorar el conocimiento sobre los efectos biológicos de los contaminantes en este bivalvo marino.
+La secuenciación y caracterización de EST pueden proporcionar una valiosa herramienta para abordar el funcionamiento general de las rutas metabólicas basales, la respuesta al estrés y los mecanismos relacionados con la inmunidad para seleccionar almejas con rasgos mejorados comerciales.
+Para generar la biblioteca de cDNA de tejido específico, se utilizó la glándula digestiva de 5 individuos, se extrajo el RNA y la biblioteca normalizada se generó usando el programa SMART cDNA para la construcción de la biblioteca y TRIMMER-DIRECT para la normalización. 
+Un total de 288 clones fueron secuenciados desde su extremo 5', y después de la etapa de limpieza se obtuvieron 256 EST de alta calidad. La longitud de EST osciló desde 120 hasta 911 pb.
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/1805.jpg" / width = 1000%>
+
+El proceso biológico mostró secuencias implicadas principalmente en procesos metabólicos (47), regulación biológica (32) y procesos biológicos más específicos, como respuesta a los estímulos (24), reproducción (16), la muerte (15), proceso de desarrollo (24), crecimiento (7) proceso de sistema inmune (7).
