--- a/Resumen20160518.md
+++ b/Resumen20160518.md
@@ -7,7 +7,7 @@
 [Americo, J.A., Dondero, F., Ozório, M., Allodi, S. y Freitas, M. (2013). Gene discovery in the tropical scallop *Nodipecten nodosus*: Construction and sequencing of
 a normalized cDNA library. *Marine Environmental Research*, 1-7.](http://www.sciencedirect.com/science/article/pii/S0141113613000640)
 
-Debido a que la mayoría de los bivalvos adultos son sésiles y no pueden migrar, han desarrollado distintas adaptaciones para hacer frente a los factores ambientales de estrés, tales como la desecación causada por la exposición al aire, fluctuaciones en la temperatura y composición del agua, etc. Algunas de estas adaptaciones son mecanismos de defensa ampliamente conservados que utilizan enzimas.
+Debido a que la mayoría de los bivalvos adultos son sésiles y no pueden migrar, han desarrollado distintas adaptaciones para hacer frente a los factores ambientales de estrés, tales como la desecación causada por la exposición al aire, fluctuaciones en la temperatura y composición del agua, etc. Algunas de estas adaptaciones conservan ampliamente los mecanismos de defensa, incluyendo un sistema antioxidante que utiliza enzimas.
 
 El desarrollo de un atlas de genes en un organismo es un paso importante hacia una mejor comprensión de las bases moleculares de dichas adaptaciones. Un mejor conocimiento del repertorio de genes de *N. nodosus*, que actualmente está muy poco representado, puede ayudar a superar problemáticas del cultivo y mejorar el conocimiento sobre los efectos biológicos de los contaminantes en este bivalvo marino.
 
