--- a/Resumen20160518.md
+++ b/Resumen20160518.md
@@ -14,7 +14,7 @@ El desarrollo de un atlas de genes en un organismo es un paso importante hacia u
 La secuenciación y caracterización de EST pueden proporcionar una valiosa herramienta para abordar el funcionamiento general de las rutas metabólicas basales, la respuesta al estrés y los mecanismos relacionados con la inmunidad para seleccionar almejas con rasgos mejorados comerciales.
 
 Para generar la biblioteca de cDNA de tejido específico, se utilizó la glándula digestiva de 5 individuos, se extrajo el RNA y se uso el programa SMART cDNA para la construcción de la biblioteca y TRIMMER-DIRECT para la normalización. 
-Un total de 288 clones fueron secuenciados desde su extremo 5', y después de la etapa de limpieza se obtuvieron 256 EST de alta calidad. La longitud de EST osciló desde 120 hasta 911 pb.
+Un total de 288 clones fueron secuenciados desde su extremo 5', y después de la etapa de limpieza se obtuvieron 256 EST de alta calidad, cuya osciló desde 120 hasta 911 pb.
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/1805.jpg" / width = 1000%>
 
