--- a/Resumen20160518.md
+++ b/Resumen20160518.md
@@ -18,4 +18,4 @@ Un total de 288 clones fueron secuenciados desde su extremo 5', y después de la
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/1805.jpg" / width = 1000%>
 
-El proceso biológico mostró secuencias implicadas principalmente en procesos metabólicos (47), regulación biológica (32) y procesos biológicos más específicos, como respuesta a los estímulos (24), reproducción (16), la muerte (15), proceso de desarrollo (24), crecimiento (7) proceso de sistema inmune (7).
+El proceso biológico mostró secuencias implicadas principalmente en procesos metabólicos (47), regulación biológica (32) y procesos biológicos más específicos, como respuesta a los estímulos (24), reproducción (16), proceso de desarrollo (24), crecimiento (7) proceso de sistema inmune (7).
