--- a/Resumen20160525.md
+++ b/Resumen20160525.md
@@ -6,14 +6,14 @@
 
 [Silvestri, F., Vitiello, V., Del Prete, F., Fabbrocini, A., Ferreira, J. y Sansone, G. (2014). Sperm motility and fertilization performance of *Nodipecten nodosus* (L., 1758) exposed at two different cryoprotectants. *Aquaculture Research*, 1-8.] (http://onlinelibrary.wiley.com/doi/10.1111/are.12521/abstract)
 
-La criopreservación es una herramienta valiosa para la acuicultura, pues permite la producción continua de semilla, independientemente de la época de desove de los reproductores. Sin embargo, las investigaciones que implican la criopreservación de semen de los moluscos marinos son escasos y se centran principalmente en los ostiones y abulón. 
+La criopreservación es una herramienta valiosa para la acuicultura, pues permite la producción continua de semilla, independientemente de la época de desove de los reproductores. Sin embargo, las investigaciones que implican la criopreservación de semen de los moluscos marinos son escasas y se centran principalmente en los ostiones y abulón. 
 
-Las sustancias como el 1-2 propilenglicol (PG) y metanol (MetOH) se utilizan comúnmente como crioprotectores para congelar los gametos de organismos marinos. Estas sustancias han mostrado buenos resultados en la criopreservación de los gametos masculinos de peces, ostión y mejillones; pero los efectos de estas sustancias sobre los parámetros fisiológicos de los espermatozoides de Nodipecten nodosus son desconocidos.
+Las sustancias como el 1-2 propilenglicol (PG) y metanol (MetOH) se utilizan comúnmente como crioprotectores para congelar los gametos de organismos marinos. Estas sustancias han mostrado buenos resultados en la criopreservación de los gametos masculinos de peces, ostión y mejillones; pero los efectos de estas sustancias sobre los parámetros fisiológicos de los espermatozoides de *Nodipecten nodosus* son desconocidos.
 
-Este estudio evaluó los efectos tóxicos de estos dos crioprotectores en los espermatozoides de la almeja mano de león Nodipecten nodosus, mediante la evaluación de la movilidad de los espermatozoides y el desarrollo de larvas D después del procedimiento de fertilización.  
-Los espermatozoides se expusieron a temperatura ambiente (22 ° C) durante 10, 20 y 30 min a diferentes intervalos de concentración de los crioprotectores. En cuanto a la movilidad de los espermatozoides, PG5%, PG7%, MetOH4% y MetOH6% no mostraron diferencias en comparación con el control (semen incubado en agua de mar).
+Este estudio evaluó los efectos tóxicos de estos dos crioprotectores en los espermatozoides de la almeja *Nodipecten nodosus*, mediante la evaluación de la movilidad de los espermatozoides y el desarrollo de larvas D después del procedimiento de fertilización.
+Los espermatozoides se expusieron a temperatura ambiente (22 ° C) durante 10, 20 y 30 min a diferentes intervalos de concentración de los crioprotectores. En cuanto a la movilidad de los espermatozoides, PG 5 %, PG 7 %, MetOH 4 % y MetOH 6 % no mostraron diferencias en comparación con el control (semen incubado en agua de mar).
 
-Los efectos tóxicos de estos crioprotectores sobre la motilidad y el desempeño de fertilización del esperma de N. nodosus se observó sólo en las concentraciones más altas de los crioprotectores evaluados. Mientras que PG mostró menores efectos toxicológicos respecto del MetOH para el parámetro de motilidad de los espermatozoides, el metanol mostró mejores resultados en  la formación de  larvas D. 
+Los efectos tóxicos de estos crioprotectores sobre la motilidad y el desempeño de fertilización del esperma de *N. nodosus* se observó sólo en las concentraciones más altas de los crioprotectores evaluados. Mientras que PG mostró menores efectos toxicológicos respecto del MetOH para el parámetro de motilidad de los espermatozoides, el metanol mostró mejores resultados en  la formación de  larvas D. 
 Estos resultados indican el uso potencial de ambos crioprotectores para los procedimientos de criopreservación.
 
 <img src="http://www.medicinareproductiva.net/wp-content/uploads/2013/03/criopreservacion.jpg" / width = 60%>
