--- a/Resumen20160525.md
+++ b/Resumen20160525.md
@@ -6,7 +6,7 @@
 
 [Silvestri, F., Vitiello, V., Del Prete, F., Fabbrocini, A., Ferreira, J. y Sansone, G. (2014). Sperm motility and fertilization performance of *Nodipecten nodosus* (L., 1758) exposed at two different cryoprotectants. *Aquaculture Research*, 1-8.] (http://onlinelibrary.wiley.com/doi/10.1111/are.12521/abstract)
 
-La criopreservación es una herramienta valiosa para la acuicultura, pues permite la producción continua de semilla, independientemente de la época de desove de los reproductores. Sin embargo, las investigaciones que implican la criopreservación de semen de los moluscos marinos son escasas y se centran principalmente en los ostiones y abulón. 
+La criopreservación es una herramienta valiosa para la acuicultura, debido a que permite la producción continua de semilla, independientemente de la época de desove de los reproductores. Sin embargo, las investigaciones que implican la criopreservación de semen de los moluscos marinos son escasas y se centran principalmente en los ostiones y abulón. 
 
 Las sustancias como el 1-2 propilenglicol (PG) y metanol (MetOH) se utilizan comúnmente como crioprotectores para congelar los gametos de organismos marinos. Estas sustancias han mostrado buenos resultados en la criopreservación de los gametos masculinos de peces, ostión y mejillones; pero los efectos de estas sustancias sobre los parámetros fisiológicos de los espermatozoides de *Nodipecten nodosus* son desconocidos.
 
