--- a/Resumen20160525.md
+++ b/Resumen20160525.md
@@ -13,7 +13,7 @@ Las sustancias como el 1-2 propilenglicol (PG) y metanol (MetOH) se utilizan com
 Este estudio evaluó los efectos tóxicos de estos dos crioprotectores en los espermatozoides de la almeja *Nodipecten nodosus*, mediante la evaluación de la movilidad de los espermatozoides y el desarrollo de larvas D después del procedimiento de fertilización.
 Los espermatozoides se expusieron a temperatura ambiente (22 ° C) durante 10, 20 y 30 min a diferentes intervalos de concentración de los crioprotectores. En cuanto a la movilidad de los espermatozoides, PG 5 %, PG 7 %, MetOH 4 % y MetOH 6 % no mostraron diferencias en comparación con el control (semen incubado en agua de mar).
 
-Los efectos tóxicos de estos crioprotectores sobre la motilidad y el desempeño de fertilización del esperma de *N. nodosus* se observó sólo en las concentraciones más altas de los crioprotectores evaluados. Mientras que PG mostró menores efectos toxicológicos respecto del MetOH para el parámetro de motilidad de los espermatozoides, el metanol mostró mejores resultados en  la formación de  larvas D. 
+Los efectos tóxicos de estos crioprotectores sobre la motilidad y el desempeño de fertilización del esperma de *N. nodosus* se observó solo en las concentraciones más altas de los crioprotectores evaluados. Mientras que PG mostró menores efectos toxicológicos respecto del MetOH para el parámetro de motilidad de los espermatozoides, el metanol mostró mejores resultados en  la formación de  larvas D. 
 Estos resultados indican el uso potencial de ambos crioprotectores para los procedimientos de criopreservación.
 
 <img src="http://www.medicinareproductiva.net/wp-content/uploads/2013/03/criopreservacion.jpg" / width = 60%>
