--- a/Resumen20160601.md
+++ b/Resumen20160601.md
@@ -7,3 +7,5 @@
 [Koch, V., Mazón, J., Sinsel, F., Robles, M. y  Dunn, D. 2005. Lion’s paw scallop (*Nodipecten subnodosus*, Sowerby 1835) aquaculture in Bahía Magdalena, Mexico: effects of population density and season on juvenile growth and mortality.  *Aquaculture Research*. *36*: 505-512. ] (http://onlinelibrary.wiley.com/doi/10.1111/j.1365-2109.2005.01247.x/abstract)
 
 La almeja mano de león es un candidato prometedor para el desarrollo sostenible de la acuicultura en la región debido a que el cultivo de bivalvos en comparación con el cultivo de peces o camarón, tiene un impacto ambiental relativamente bajo en y además los costos de operación son menores debido a la menor necesidad de infraestructura y alimentación; asimismo la semilla se puede producir fácilmente; por otro lado, *N. subnodosus* crece rápidamente (0.2-0.35 mm/día) y alcanza la talla comercial (100-120 mm de altura de la concha) en 1.5-2 años; además las almejas tienen un alto valor en el mercado regional, nacional e internacional; y por último las técnicas establecidas para el cultivo de otras almejas y bivalvos (por ejemplo, linternas, bandejas o bolsas de malla Nestier) se pueden utilizar para esta especie.
+
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Koch.jpg" / width = 60%>
