--- a/Resumen20160601.md
+++ b/Resumen20160601.md
@@ -6,6 +6,12 @@
 
 [Koch, V., Mazón, J., Sinsel, F., Robles, M. y  Dunn, D. 2005. Lion’s paw scallop (*Nodipecten subnodosus*, Sowerby 1835) aquaculture in Bahía Magdalena, Mexico: effects of population density and season on juvenile growth and mortality.  *Aquaculture Research*. *36*: 505-512. ] (http://onlinelibrary.wiley.com/doi/10.1111/j.1365-2109.2005.01247.x/abstract)
 
-La almeja mano de león es un candidato prometedor para el desarrollo sostenible de la acuicultura en la región debido a que el cultivo de bivalvos en comparación con el cultivo de peces o camarón, tiene un impacto ambiental relativamente bajo en y además los costos de operación son menores debido a la menor necesidad de infraestructura y alimentación; asimismo la semilla se puede producir fácilmente; por otro lado, *N. subnodosus* crece rápidamente (0.2-0.35 mm/día) y alcanza la talla comercial (100-120 mm de altura de la concha) en 1.5-2 años; además las almejas tienen un alto valor en el mercado regional, nacional e internacional; y por último las técnicas establecidas para el cultivo de otras almejas y bivalvos (por ejemplo, linternas, bandejas o bolsas de malla Nestier) se pueden utilizar para esta especie.
+La almeja mano de león es un candidato prometedor para el desarrollo sostenible de la acuicultura, el cultivo de bivalvos en comparación con el cultivo de peces o camarón, tiene un impacto ambiental relativamente bajo, además los costos de operación son menores debido a una menor necesidad de infraestructura y alimentación; asimismo la semilla se puede producir fácilmente; por otro lado, N. subnodosus crece rápidamente y alcanza la talla comercial (100-120 mm de altura de la concha) en 1.5-2 años; además las almejas tienen un alto valor en el mercado regional, nacional e internacional.
+
+El objetivo de este estudio fue determinar cómo puede la densidad de cultivo y los cambios estacionales en parámetros ambientales afectar el crecimiento y la supervivencia de semillas de mano de león, esto para determinar una densidad apropiada de cultivo en operaciones comerciales para asegurar un alto crecimiento y supervivencia.
+
+La semilla se sembró en Bahía Magdalena a tres densidades de población (500, 1000 y 2000 semillas por bandeja) durante un período de dos meses (otoño 2001 y primavera 2002). Se midió el crecimiento y también fue evaluada la mortalidad al final del experimento. El crecimiento fue rápido (0.24-0.38 mm/día) en comparación con otros pectínidos, el más rápido se registró durante otoño en las bandejas con la menor densidad, cuando la temperatura del agua fue mayor. La mortalidad fue baja (0.5-3.0 %) a lo largo de los 60 días de cultivo, con excepción del tratamiento de alta densidad en otoño, que presento una mortalidad del 44 %, esto debido a un incremento en la temperatura del agua, mayor demanda de oxígeno y competencia por alimento.
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Koch.jpg" / width = 100%>
+
+Diferencias genéticas entre las dos cohortes y diferencias en la calidad de la semilla pudieran también haber contribuido en las diferencias de crecimiento. Para asegurar un alto crecimiento y supervivencia se recomienda una densidad inicial de 1000 semillas por bandeja, también es necesario reducir la densidad de cultivo cada determinado tiempo.
