--- a/Resumen20160601.md
+++ b/Resumen20160601.md
@@ -6,7 +6,7 @@
 
 [Koch, V., Mazón, J., Sinsel, F., Robles, M. y  Dunn, D. 2005. Lion’s paw scallop (*Nodipecten subnodosus*, Sowerby 1835) aquaculture in Bahía Magdalena, Mexico: effects of population density and season on juvenile growth and mortality.  *Aquaculture Research*. *36*: 505-512. ] (http://onlinelibrary.wiley.com/doi/10.1111/j.1365-2109.2005.01247.x/abstract)
 
-La almeja mano de león es un candidato prometedor para el desarrollo sostenible de la acuicultura, el cultivo de bivalvos en comparación con el cultivo de peces o camarón, tiene un impacto ambiental relativamente bajo, además los costos de operación son menores debido a una menor necesidad de infraestructura y alimentación; asimismo la semilla se puede producir fácilmente; por otro lado, *N. subnodosus* crece rápidamente y alcanza la talla comercial (100-120 mm de altura de la concha) en 1.5-2 años; además las almejas tienen un alto valor en el mercado regional, nacional e internacional.
+La almeja mano de león es un candidato prometedor para el desarrollo sostenible de la acuicultura, debido a que el cultivo de bivalvos en comparación con el cultivo de peces o camarón, tiene un impacto ambiental relativamente bajo, los costos de operación son menores por una menor necesidad de infraestructura y alimentación; la semilla se puede producir fácilmente; por otro lado, *N. subnodosus* crece rápidamente y alcanza la talla comercial (100-120 mm de altura de la concha) en 1.5-2 años y además las almejas tienen un alto valor en el mercado regional, nacional e internacional.
 
 El objetivo de este estudio fue determinar cómo puede la densidad de cultivo y los cambios estacionales en parámetros ambientales afectar el crecimiento y la supervivencia de semillas de mano de león, esto para determinar una densidad apropiada de cultivo en operaciones comerciales para asegurar un alto crecimiento y supervivencia.
 
