--- a/Resumen20160608.md
+++ b/Resumen20160608.md
@@ -1,1 +1,7 @@
 
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
+
+### Abundancia larvaria y captación de semilla de la almeja mano de león *Nodipecten subnodosus* en la Laguna Ojo de Liebre, Baja California Sur, México
+
+[Maguiño-Napurí, R., Maeda-Martínez, A., Moctezuma-Cano, T., Valle-Meza, G. y Acosta-Salmón, H. 2011. Abundancia larvaria y captación de semilla de la almeja mano de león *Nodipecten subnodosus* en la Laguna Ojo de Liebre, Baja California Sur, México.  *Ciencias Marinas*. *37*(1): 51-57.] (https://www.researchgate.net/publication/262718521_Abundancia_larvaria_y_captacion_de_semilla_de_la_almeja_mano_de_leon_Nodipecten_subnodosus_en_la_Laguna_Ojo_de_Liebre_Baja_California_Sur_Mexico)
+
