--- a/Resumen20160608.md
+++ b/Resumen20160608.md
@@ -5,3 +5,9 @@
 
 [Maguiño-Napurí, R., Maeda-Martínez, A., Moctezuma-Cano, T., Valle-Meza, G. y Acosta-Salmón, H. 2011. Abundancia larvaria y captación de semilla de la almeja mano de león *Nodipecten subnodosus* en la Laguna Ojo de Liebre, Baja California Sur, México.  *Ciencias Marinas*. *37*(1): 51-57.] (https://www.researchgate.net/publication/262718521_Abundancia_larvaria_y_captacion_de_semilla_de_la_almeja_mano_de_leon_Nodipecten_subnodosus_en_la_Laguna_Ojo_de_Liebre_Baja_California_Sur_Mexico)
 
+La almeja mano de león ha sido considerada desde 1990 una de las especies de moluscos comerciales más importantes en la península de Baja California y existe un gran interés en desarrollar métodos de cultivo para esta especie, debido a su rápido crecimiento y alto valor comercial. Se han desarrollado protocolos de cultivo, pero la producción comercial es aún inestable, debido al suministro escaso de la semilla.
+La almeja generalmente se reproduce en el medio silvestre una vez al año, de agosto a noviembre, por esta razón se estudió la abundancia de larvas y el potencial para la captación comercial de semilla en la Laguna Ojo de Liebre, B.C.S.
+
+Para ello se registró la densidad de larvas de septiembre a diciembre, se tomaron muestras de agua en el sitio de estudio y se instalaron 300 colectores de semilla que consistían en bolsas de nilón de 2 mm de luz de malla. Los colectores se instalaron durante el pico anual de actividad reproductiva (noviembre y octubre), al mes se retiraron seis colectores y no se observó reclutamiento, por lo que se retiraron hasta febrero del año siguiente.
+
+La captación de semillas fue pobre en el sitio de estudio, el resultado de reclutamiento estuvo en un intervalo de 37 a 38 semillas por colector, lo cual no es suficiente para sostener una operación comercial. Esto puede deberse a que prefieren un sustrato de fijación diferente al que se ofreció o también pudiera ser que las corrientes llevaron a las larvas fuera de la laguna, pero hacen falta más estudios para determinar sitios y técnicas de captación óptimos.
