--- a/Resumen20160608.md
+++ b/Resumen20160608.md
@@ -10,4 +10,6 @@ La almeja generalmente se reproduce en el medio silvestre una vez al año, de ag
 
 Para ello se registró la densidad de larvas de septiembre a diciembre, se tomaron muestras de agua en el sitio de estudio y se instalaron 300 colectores de semilla que consistían en bolsas de nilón de 2 mm de luz de malla. Los colectores se instalaron durante el pico anual de actividad reproductiva (noviembre y octubre), al mes se retiraron seis colectores y no se observó reclutamiento, por lo que se retiraron hasta febrero del año siguiente.
 
+<img src="https://www.google.com.mx/search?q=colectores+de+semilla+de+moluscos&espv=2&biw=1366&bih=667&source=lnms&tbm=isch&sa=X&ved=0ahUKEwikkdbe2ZfNAhWJLmMKHSjiDO0Q_AUIBigB#imgrc=eJ5W2f8JFmzGIM%3A" / width = 100%>
+
 La captación de semillas fue pobre en el sitio de estudio, el resultado de reclutamiento estuvo en un intervalo de 37 a 38 semillas por colector, lo cual no es suficiente para sostener una operación comercial. Esto puede deberse a que prefieren un sustrato de fijación diferente al que se ofreció o también pudiera ser que las corrientes llevaron a las larvas fuera de la laguna, pero hacen falta más estudios para determinar sitios y técnicas de captación óptimos.
