--- a/Resumen20160622.md
+++ b/Resumen20160622.md
@@ -7,4 +7,5 @@
 
 [Puslednik, L. y Serb, J. (2008). Molecular phylogenetics of the Pectinidae (Mollusca: Bivalvia) and effect of increased taxon sampling and outgroup selection on tree topology. *Molecular Phylogenetics and Evolution*, *48*, 1178-1188.] (http://www.sciencedirect.com/science/article/pii/S1055790308002236)
 
+La Familia Pectinidae es una de las más grandes de bivalvos marinos, con aproximadamente 225 especies existentes incluidas en 56 géneros. Los pectínidos están presentes en todos los mares del mundo, habitando ambientes que van desde la zona intermareal hasta profundidades abisales, presentan una amplia gama de formas de la concha, tamaño y color; además de ser un grupo económicamente importante, con un valor estimado a escala global de su carne por $63.6 millones de dólares. A pesar de su importancia tanto ecológica como económica, la clasificación taxonómica de la familia está basada en caracteres morfológicos macroscópicos de las conchas de adultos. 
 
