--- a/Resumen20160622.md
+++ b/Resumen20160622.md
@@ -7,5 +7,12 @@
 
 [Puslednik, L. y Serb, J. (2008). Molecular phylogenetics of the Pectinidae (Mollusca: Bivalvia) and effect of increased taxon sampling and outgroup selection on tree topology. *Molecular Phylogenetics and Evolution*, *48*, 1178-1188.] (http://www.sciencedirect.com/science/article/pii/S1055790308002236)
 
-La Familia Pectinidae es una de las más grandes de bivalvos marinos, con aproximadamente 225 especies existentes incluidas en 56 géneros. Los pectínidos están presentes en todos los mares del mundo, habitando ambientes que van desde la zona intermareal hasta profundidades abisales, presentan una amplia gama de formas de la concha, tamaño y color; además de ser un grupo económicamente importante, con un valor estimado a escala global de su carne por $63.6 millones de dólares. A pesar de su importancia tanto ecológica como económica, la clasificación taxonómica de la familia está basada en caracteres morfológicos macroscópicos de las conchas de adultos. 
+La Familia Pectinidae es una de las familias más grandes de bivalvos marinos, con aproximadamente 225 especies existentes incluidas en 56 géneros. Los pectínidos presentan una amplia gama de formas de la concha, tamaño y color, pero a pesar de su importancia tanto ecológica como económica, la clasificación taxonómica de la familia está basada en caracteres morfológicos de las conchas de adultos, lo cual refleja algunas dudas en validez de estos esquemas de clasificación. Entre los estudios filogenéticos moleculares de pectínidos, solo tres han examinado más de 10 especies y todos los análisis moleculares previos solo han utilizado información mitocondrial. 
+
+El objetivo de este estudio fue aumentar el muestreo de niveles taxonómicos para el grupo interno y externo, y de secuencias de genes para obtener una mejor comprensión de la evolución de los pectínidos. Las relaciones filogenéticas fueron examinadas usando dos genes mitocondriales (12S rRNA y 16S rRNA) y un gen nuclear (Histona H3) para 46 especies de pectínidos. El DNA se extrajo del manto o del musculo aductor, posteriormente se secuencio y las secuencias de cada gen fueron alineadas. Los taxones de los grupos externos fueron Propeamussidae, Spondylidae y Limidae los cuales también fueron secuenciados para examinar el impacto de la selección del grupo externo en la topología. De las tres regiones de genes, el 12S tuvo la mayor proporción de sitios variables, mientras que H3 tuvo la menor proporción.
+
+El análisis filogenético indicó que la Familia Pectinidae es monofilética, es decir, todos los organismos evolucionaron a partir de un ancestro en común. El grupo Aequipectinini es el miembro más basal de esta familia, y los grupos Chlamydinae y Palliolinae representan los grupos que divergieron recientemente. 
+
+Las relaciones filogenéticas de algunos pectínidos aún no se han estudiado con técnicas moleculares. De los 56 géneros de esta familia, solo 21 se incluyeron en este estudio. Los resultados de este trabajo destacan uno de los principales problemas de la sistemática de pectínidos, que es la desconexión entre las técnicas morfológicas y moleculares, ya que no existe ningún estudio que examine topologías tanto morfológicas como moleculares simultáneamente.
+
 
