--- a/Resumen20160622.md
+++ b/Resumen20160622.md
@@ -3,7 +3,7 @@
 
 ### Molecular phylogenetics of the Pectinidae (Mollusca: Bivalvia) and effect of increased taxon sampling and outgroup selection on tree topology
 
-#### Filogenia molecular de los Pectínidos (Mollusca: Bivalvia) y efecto del aumento de taxones de muestreo y selección de grupo externo en la topología del árbol
+#### Filogenética molecular de los Pectínidos (Mollusca: Bivalvia) y efecto del aumento de taxones de muestreo y selección de grupo externo en la topología del árbol
 
 [Puslednik, L. y Serb, J. (2008). Molecular phylogenetics of the Pectinidae (Mollusca: Bivalvia) and effect of increased taxon sampling and outgroup selection on tree topology. *Molecular Phylogenetics and Evolution*, *48*, 1178-1188.] (http://www.sciencedirect.com/science/article/pii/S1055790308002236)
 
