--- a/Resumen20160622.md
+++ b/Resumen20160622.md
@@ -7,7 +7,7 @@
 
 [Puslednik, L. y Serb, J. (2008). Molecular phylogenetics of the Pectinidae (Mollusca: Bivalvia) and effect of increased taxon sampling and outgroup selection on tree topology. *Molecular Phylogenetics and Evolution*, *48*, 1178-1188.] (http://www.sciencedirect.com/science/article/pii/S1055790308002236)
 
-La Familia Pectinidae es una de las familias más grandes de bivalvos marinos, con aproximadamente 225 especies existentes incluidas en 56 géneros. Los pectínidos presentan una amplia gama de formas de la concha, tamaño y color, pero a pesar de su importancia tanto ecológica como económica, la clasificación taxonómica de la familia está basada en caracteres morfológicos de las conchas de adultos, lo cual refleja algunas dudas en validez de estos esquemas de clasificación. Entre los estudios filogenéticos moleculares de pectínidos, solo tres han examinado más de 10 especies y todos los análisis moleculares previos solo han utilizado información mitocondrial. 
+La Familia Pectinidae es una de las familias más grandes de bivalvos marinos, con aproximadamente 225 especies existentes incluidas en 56 géneros. Los pectínidos presentan una amplia gama de formas de la concha, tamaño y color, pero a pesar de su importancia tanto ecológica como económica, la clasificación taxonómica de la familia está basada en caracteres morfológicos de las conchas de adultos, lo cual genera algunas dudas en la validez de estos esquemas de clasificación. Entre los estudios filogenéticos moleculares de pectínidos, solo tres han examinado más de 10 especies y todos los análisis moleculares previos solo han utilizado información mitocondrial. 
 
 El objetivo de este estudio fue aumentar el muestreo de niveles taxonómicos para el grupo interno y externo, y de secuencias de genes para obtener una mejor comprensión de la evolución de los pectínidos. Las relaciones filogenéticas fueron examinadas usando dos genes mitocondriales (12S rRNA y 16S rRNA) y un gen nuclear (Histona H3) para 46 especies de pectínidos. El DNA se extrajo del manto o del musculo aductor, posteriormente se secuencio y las secuencias de cada gen fueron alineadas. Los taxones de los grupos externos fueron Propeamussidae, Spondylidae y Limidae los cuales también fueron secuenciados para examinar el impacto de la selección del grupo externo en la topología. De las tres regiones de genes, el 12S tuvo la mayor proporción de sitios variables, mientras que H3 tuvo la menor proporción.
 
