--- a/Resumen20160706.md
+++ b/Resumen20160706.md
@@ -5,3 +5,7 @@
 #### Diversidad de DNA nuclear y mitocondrial en almeja mano de león del Pacífico, *Nodipecten subnodosus* silvestre y cultivada (Península de Baja California, México). 
 
 [Petersen, J., Ibarra, A., y May, B. 2010. Nuclear and mtDNA lineage diversity in wild and cultured Pacific lion-paw scallop, *Nodipecten subnodosus* (Baja California Peninsula, Mexico). *Mar. Biol.*, 2751-2767.] (http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3873021/)
+
+
+
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Sitios%20de%20muestreo.jpg" / width = 50%>
