--- a/Resumen20160706.md
+++ b/Resumen20160706.md
@@ -9,3 +9,6 @@
 
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Sitios%20de%20muestreo.jpg" / width = 50%>
+
+
+<img src="http://www.pectensite.com/subnodosus1groot.JPG" / width = 50%>
