--- a/Resumen20160706.md
+++ b/Resumen20160706.md
@@ -6,9 +6,14 @@
 
 [Petersen, J., Ibarra, A., y May, B. 2010. Nuclear and mtDNA lineage diversity in wild and cultured Pacific lion-paw scallop, *Nodipecten subnodosus* (Baja California Peninsula, Mexico). *Mar. Biol.*, 2751-2767.] (http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3873021/)
 
+La población estimada de almeja mano de león en la laguna Ojo de Liebre era de ocho millones en 1996 a 18 millones en 2004, sin embargo empresas acuícolas se establecieron a lo largo de la laguna y los pescadores han reportado que quedan muy pocas e incluso ninguna almeja. Las medidas de diversidad genética son importantes en el manejo, especialmente para las especies que habitan en áreas alteradas o que son manipuladas para cultivo. 
 
-
+Por ello el objetivo de este estudio fue investigar la variación genética entre y dentro de poblaciones naturales y silvestres de almeja, así como de las empresas de acuicultura utilizando DNA nuclear (14 microsatélites) y mtDNA. Se obtuvieron muestras de localidades del Golfo de California y de las costas del Pacífico, así como también de tres empresas dedicadas al cultivo de esta especie en Guerrero Negro y Bahía Tortugas.
+ 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Sitios%20de%20muestreo.jpg" / width = 40%>
 
+Las muestras provenientes de acuicultura mostraron una menor diversidad, medida por la heterocigosidad esperada y la riqueza de alelos. La información obtenida con los  microsatélites demostró que las poblaciones de almeja en el Golfo de California y la Laguna Ojo de Liebre actúan como dos poblaciones genéticamente distintas.
+
+Una muestra de semilla silvestre recolectada por los productores no mostró reducción en la diversidad genética, lo que indica que ésta se pierde en alguna parte en el proceso de desove o en la selección de las condiciones de cultivo. Es importante mantener la diversidad genética en poblaciones cultivadas de almeja, ya que su etapa de engorde se produce en aguas abiertas adyacentes a las poblaciones naturales. La introgresión de individuos de cultivo en el medio natural, ya sea intencional o no, puede afectar la diversidad genética en la naturaleza.
 
 <img src="http://www.pectensite.com/subnodosus1groot.JPG" / width = 30%>
