--- a/Resumen20160712.md
+++ b/Resumen20160712.md
@@ -3,7 +3,9 @@
 
 ### Efectos de la autofecundación sobre las varianzas aditiva, ambiental y fenotípica, y sobre el valor de la heredabilidad para el rasgo “longitud de la valva” en *Argopecten purpuratus*, utilizando un modelo animal 
 
-Resumen por: Priscila Oviedo Velázquez
+[Toro, J., Montoya, M., y Martínez, V. 2019. Efectos de la autofecundación sobre las varianzas aditiva, ambiental y fenotípica, y sobre el valor de la heredabilidad para el rasgo "longitud de la valva" en *Argopecten purpuratus*, utilizando un modelo animal. *Arch Med Vet*, 41:245-253.] (http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3873021/)
+
+Resumen por: #Priscila Oviedo Velázquez
 
 El pectínido, *Argopecten purpuratus*, es una especie hermafrodita, de gran interés comercial en Chile con 252 centros de cultivo. Se ha observado que la autofecundación puede afectar el crecimiento y la sobrevivencia de los individuos, ya que conlleva a una pérdida de la variabilidad genética y afecta la capacidad adaptativa de una especie. 
 El objetivo de este estudio fue cuantificar los efectos de la autofecundación en *A. purpuratus* sobre el valor de la heredabilidad para la tasa de crecimiento y supervivencia. Se utilizaron datos de autofecundación obtenidos experimentalmente, para ello se generaron 49 familias mediante una matriz factorial de cruzamientos (7x7), de las cuales 7 familias fueron autofecundadas. Se realizó un análisis estadístico de datos de longitud de valva, peso vivo y supervivencia, de cada una de las familias, con distintos porcentajes de autofecundación inicial. La identificación de los individuos autofecundados dentro de cada una de las familias producidas se llevó a cabo utilizando marcadores moleculares RAPD. Se estimó el porcentaje de autofecundados a los 6, 9 y 12 meses de edad observando una reducción significativa de estos en cada una de las familias experimentales.
