--- a/Resumen20160712.md
+++ b/Resumen20160712.md
@@ -11,8 +11,7 @@ El pectínido, *Argopecten purpuratus*, es una especie hermafrodita, de gran int
 
 El objetivo de este estudio fue cuantificar los efectos de la autofecundación en *A. purpuratus* sobre el valor de la heredabilidad para la tasa de crecimiento y supervivencia. Se utilizaron datos de autofecundación obtenidos experimentalmente, para ello se generaron 49 familias mediante una matriz factorial de cruzamientos (7x7), de las cuales 7 familias fueron autofecundadas. Se realizó un análisis estadístico de datos de longitud de valva, peso vivo y supervivencia, de cada una de las familias, con distintos porcentajes de autofecundación inicial. La identificación de los individuos autofecundados dentro de cada una de las familias producidas se llevó a cabo utilizando marcadores moleculares RAPD. Se estimó el porcentaje de autofecundados a los 6, 9 y 12 meses de edad observando una reducción significativa de estos en cada una de las familias experimentales.
 
-Los resultados mostraron que la autofecundación afecta negativamente el desarrollo de *A. purpuratus*, la longitud de la valva mostró una disminución a medida que aumentaron los porcentajes de autofecundación. El peso vivo y la tasa de supervivencia del pectínido también disminuyeron con el aumento de la autofecundación.
-
-Sin embargo, las familias generadas por cruzamiento, que tienen porcentajes de autofecundación variables dentro de ellas, no se vieron afectadas, debido a que se observó una disminución de individuos autofecundados dentro estas familias a medida que avanzó el ciclo de vida del pectínido.  
+Los resultados mostraron que la autofecundación afecta negativamente el desarrollo de *A. purpuratus*, la longitud de la valva, el peso vivo y la tasa de supervivencia mostraron una disminución a medida que aumentaron los porcentajes de autofecundación. 
+Sin embargo, las familias generadas por cruzamiento, que tienen porcentajes de autofecundación variables dentro de ellas, no se vieron afectadas, debido a que se observó una disminución de individuos autofecundados a medida que avanzó el ciclo de vida del pectínido. Este estudio muestra la importancia de evitar la autofecundación en la reproducción de pectínidos a fin de obtener mejores producciones.
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Ostiones_en_concha.jpg" / width = 40%>
