--- a/Resumen20160817.md
+++ b/Resumen20160817.md
@@ -1,7 +1,8 @@
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
 
-### 
+### Temporal and spatial variation of sea surface temperature, chlorophyll *a*, and primary productivity in the Gulf of California
+#### Variación temporal y espacial de temperatura superficial del mar, clorofila *a* y productividad primaria en el Golfo de California
 [Toro, J., Montoya, M., y Martínez, V. 2009. Efectos de la autofecundación sobre las varianzas aditiva, ambiental y fenotípica, y sobre el valor de la heredabilidad para el rasgo "longitud de la valva" en *Argopecten purpuratus*, utilizando un modelo animal. *Arch Med Vet*, 41:245-253.] (http://www.scielo.cl/scielo.php?script=sci_arttext&pid=S0301-732X2009000300009&lng=es&nrm=iso&tlng=es)
 
 #### Resumen por: Priscila Oviedo Velázquez
