--- a/Resumen20160817.md
+++ b/Resumen20160817.md
@@ -3,7 +3,7 @@
 
 ### Temporal and spatial variation of sea surface temperature, chlorophyll *a*, and primary productivity in the Gulf of California
 #### Variación temporal y espacial de temperatura superficial del mar, clorofila *a* y productividad primaria en el Golfo de California
-[Toro, J., Montoya, M., y Martínez, V. 2009. Efectos de la autofecundación sobre las varianzas aditiva, ambiental y fenotípica, y sobre el valor de la heredabilidad para el rasgo "longitud de la valva" en *Argopecten purpuratus*, utilizando un modelo animal. *Arch Med Vet*, 41:245-253.] (http://www.scielo.cl/scielo.php?script=sci_arttext&pid=S0301-732X2009000300009&lng=es&nrm=iso&tlng=es)
+[Escalante, F., Valdez-Holguín, J., Álvarez-Borrego, S. y Lara-Lara, J. 2013. Temporal and spatial variation of sea surface temperature, chlorophyll *a*, and primary productivity in the Gulf of California. *Ciencias Marinas*, 39(2):203-215.] (http://www.cienciasmarinas.com.mx/index.php/cmarinas/article/view/2233)
 
 #### Resumen por: Priscila Oviedo Velázquez
 
