--- a/Resumen20160817.md
+++ b/Resumen20160817.md
@@ -7,11 +7,11 @@
 
 #### Resumen por: Priscila Oviedo Velázquez
 
-El pectínido, *Argopecten purpuratus*, es una especie hermafrodita, de gran interés comercial en Chile con 252 centros de cultivo. Se ha observado que la autofecundación puede afectar el crecimiento y la supervivencia de los individuos, ya que conlleva a una pérdida de la variabilidad genética y afecta la capacidad adaptativa de una especie. 
+El Golfo de California es uno de los ecosistemas oceánicos más productivos en el que existe una  variación estacional e interanual muy marcada. EL régimen de vientos dentro del Golfo es variable: de noviembre a mayo prevalecen vientos provenientes del noroeste, el resto del año prevalecen vientos provenientes del sureste que generan condiciones climáticas de tipo tropical. En este estudio emplearon datos satelitales de 1997 a 2010, para describir la variación de temperatura superficial del mar (TSM), clorofila a (Chl) y productividad primaria (PP) a diferentes escalas temporales y espaciales en el golfo de California. Las señales interanuales El Niño (EN) y La Niña (LN) fueron más evidentes en la boca del golfo.
 
-El objetivo de este estudio fue cuantificar los efectos de la autofecundación en *A. purpuratus* sobre el valor de la heredabilidad para la tasa de crecimiento y supervivencia. Se utilizaron datos de autofecundación obtenidos experimentalmente, para ello se generaron 49 familias mediante una matriz factorial de cruzamientos (7x7), de las cuales 7 familias fueron autofecundadas. Se realizó un análisis estadístico de datos de longitud de valva, peso vivo y supervivencia, de cada una de las familias, con distintos porcentajes de autofecundación inicial. La identificación de los individuos autofecundados dentro de cada una de las familias producidas se llevó a cabo utilizando marcadores moleculares RAPD. Se estimó el porcentaje de autofecundados a los 6, 9 y 12 meses de edad observando una reducción significativa de estos en cada una de las familias experimentales.
+Los promedios anuales de Chl y PP presentaron un gradiente a lo largo del Golfo de California, con características oligotróficas en la boca, mesotróficas en la región centro y eutróficas en la región de islas grandes (RIG). El promedio anual de TSM presentó un gradiente con incremento de sur a norte; fue más alto en la boca (25.57 °C), intermedio en la región central (24.63 °C) y más bajo en la RIG (23.24 °C). La PP anual más alta se presentó en la RIG (781 g C m-2 año-1) y la más baja en la boca (336 g C m-2 año-1).
+ 
+La concentración de Chl y PP fue mayor en la RIG, que presento los valores más altos en primavera, y se redujeron hasta en un 40% con condiciones de verano. En esta región, los efectos de EN y LN sobre la Chl y PP no fueron significativos como en la boca, región en donde EN  disminuyó significativamente la concentración de Chl y PP y LN incrementó esos factores.
 
-Los resultados mostraron que la autofecundación afecta negativamente el desarrollo de *A. purpuratus*, la longitud de la valva, el peso vivo y la tasa de supervivencia mostraron una disminución a medida que aumentaron los porcentajes de autofecundación. 
-Sin embargo, las familias generadas por cruzamiento, que tienen porcentajes de autofecundación variables dentro de ellas, no se vieron afectadas, debido a que se observó una disminución de individuos autofecundados a medida que avanzó el ciclo de vida del pectínido. Este estudio muestra la importancia de evitar la autofecundación en la reproducción de pectínidos a fin de obtener mejores producciones.
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Ostiones_en_concha.jpg" / width = 40%>
